# dicebox.core

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  build_image.bat  classification_service.py  dicebox.config  dicebox_client.py  dicebox_dataset_loader.py  dicebox_multi_client.py  dicebox_service.py  dicebox_test_client.py  generate_noise_image.py  lonestar.py  lonestar_score.py  lonestar_train.py  main.py  network.py  package-lock.json  package.json  primordialpool.py  requirements.build.txt  requirements.macos.txt  requirements.py2.txt  requirements.txt  run_unit_tests.sh  sample.py  sensory_service.py  sensory_service_batch_processor.py  setup.cfg  setup.py  train.py  training_processor.py  training_service.py
.github/workflows/: linting.yml  release.yml  unit-tests.yml
assets/: Dicebox Services Diagram.xml
client/: dataset_builder.py  dicebox_client.py  dicebox_test_client.py  mnist_client.py  mnist_test_client.py
client/lib/: __init__.py  dicebox_config.py  filesystem_connecter.py  mnist_config.py
config/: dicebox.config
dicebox/: dicebox_config.py  dicebox_network.py  docker_config.py  evolutionary_optimizer.py  filesystem_connecter.py  network.py  optimizer.py  sensory_interface.py
dicebox/config/: base_config.py  dicebox_config.py
dicebox/connectors/: filesystem_connecter.py  sensory_service_connector.py
dicebox/utils/: __init__.py  helpers.py
docs/: category_map.json
legacy/: train.py
lib/: dicebox_config.py  docker_config.py  filesystem_connecter.py  network.py  optimizer.py  sensory_interface.py  train.py
lonestar/: lonestar_train.py
m1/: create_environment.sh  requirements.docker.txt  requirements.orig.txt  requirements.test.txt  requirements.txt
nginx/: dicebox.site  sensory.site  snippets-trainning.config  training.site
primordialpool/: dicebox_main.py  primordialpool.py
projects/dicebox/: dicebox_test_client.py
projects/mnist/: dicebox.config  dicebox.pool.config  dicebox.training.config  mnist_decoder.py  mnist_test_client.py
server/: dicebox.py  dicebox_service.py
server/lib/: network.py  optimizer.py  train.py
src/: classification_service.py  dicebox_network.py  herder.py  mnist_predict.py  mnist_test_client.py  pool_server.py  training_processor.py
src/config/: base_config.py  dicebox_config.py  network_config.py
src/connectors/: filesystem_connecter.py  sensory_service_connector.py
src/dicebox/: __init__.py  dicebox_network.py  evolutionary_optimizer.py
src/dicebox/config/: base_config.py  dicebox_config.py
src/dicebox/connectors/: filesystem_connecter.py  sensory_service_connector.py
src/dicebox/factories/: layer_factory.py  network_factory.py
src/dicebox/models/: layer.py  network.py  network_config.py  optimizers.py
src/dicebox/optimizers/: evolutionary_optimizer.py
src/dicebox/utils/: __init__.py
src/factories/: network_factory.py
src/models/: layer.py  optimizers.py
src/optimizers/: evolutionary_optimizer.py
src/shapeandshare/dicebox/: __init__.py  dicebox_network.py  primordialpool.py
src/shapeandshare/dicebox/config/: __init__.py  base_config.py  dicebox_config.py
src/shapeandshare/dicebox/connectors/: filesystem_connector.py  sensory_service_connector.py
src/shapeandshare/dicebox/core/: __init__.py  (+4 more)
src/utils/: helpers.py
standalone/: main.py  train.py
standalone/lib/: dicebox_config.py  filesystem_connecter.py  mnist_config.py
test/: DiceboxConfigTest.py  DiceboxNetworkTest.py  EvolutionaryOptimizerTest.py  FileSystemConnectorTest.py  LoggingSampleTest.py  UtilsTest.py  dicebox.config  test_dicebox_config.py  test_dicebox_network.py  test_evolutionary_optimizer.py  test_filesystem_connector.py  test_helpers.py  test_logger.py
test/config/: DiceboxConfigTest.py
test/data/: CATEGORY_MAP.json  DATASET_INDEX.json  dicebox.config  lonestar.model.json  lonestar.model_v2.json  model.json  model_v2.json  multi_model.json
test/fixtures/: .env.local  .one.env  dicebox.config  dicebox.env.override.test.config  dicebox.lonestar.json  lonestar.model.json  model.json
test/fixtures/mnist/: dicebox.config
test/lib/: test_sensory_interface.py
test/unit/: DiceboxNetworkTest.py  PrimordialPoolTest.py
test/unit/config/: .env  BaseConfigTest.py  DiceboxConfigTest.py  NetworkConfigTest.py
test/unit/connectors/: FileSystemConnectorTest.py
test/unit/factories/: LayerFactoryTest.py  NetworkFactoryTest.py
test/unit/models/: DiceboxNetworkTest.py  LayerTest.py  NetworkTest.py  OptimizersTest.py
test/unit/optimizers/: EvolutionaryOptimizerTest.py
test/unit/utils/: UtilsTest.py
tests/: filesystem_connector_tests.py
tests/lib/: filesystem_connector_tests.py
tools/: base64_decode_image.py  base64_encode_image.py  dicebox_dataset_loader.py  dicebox_test_client.py  generate_noise_image.py  sample.py  sample.txt
webcam/: index.html  simple.js  webcam.css  webcam.js
(+28 files in other folders)
