# All configuration for plugins and other utils is defined here.
# Read more about `setup.cfg`:
# https://docs.python.org/3/distutils/configfile.html


[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0


# === Linter configuration ===
# You can reuse this configuration in your own projects.
# See: https://wemake-python-stylegui.de/en/latest/pages/usage/integrations/nitpick.html

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
format = wemake
show-source = True
statistics = False
doctests = True

# Plugins:
accept-encodings = utf-8
max-complexity = 6
max-line-length = 120

# Self settings:
max-imports = 15

# Excluding some directories:
exclude =
  .git
  __pycache__
  .venv
  .eggs
  *.egg
  # These folders contain code badly written for reasons:
  # Project spefic, do not copy.
  tests/fixtures/**
  tests/**/snapshots/**

# Exclude some pydoctest checks globally:
ignore = D100, D104, D401, W504, RST303, RST304, DAR103, DAR203

per-file-ignores =
  # These function names are part of 3d party API:
  wemake_python_styleguide/visitors/ast/*.py: N802
  # These modules should contain a lot of classes:
  wemake_python_styleguide/violations/*.py: WPS202
  # This module should contain magic numbers:
  wemake_python_styleguide/options/defaults.py: WPS432
  # Checker has a lot of imports:
  wemake_python_styleguide/checker.py: WPS201
  # Allows mypy type hinting, `Ellipsis`` usage, multiple methods:
  wemake_python_styleguide/types.py: D102, WPS214, WPS220, WPS428
  # There are multiple fixtures, `assert`s, and subprocesses in tests:
  tests/*.py: S101, S105, S404, S603, S607, WPS211, WPS226
  # Docs can have the configuration they need:
  docs/conf.py: WPS407
  # Pytest fixtures
  tests/plugins/*.py: WPS442

[isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
# Is the same as 80 in flake8:
line_length = 79

# We need these lines for Github Action to work correctly,
# **please** do not copy it to your own configs:
default_section = THIRDPARTY
known_first_party = wemake_python_styleguide*
skip_glob =
  # These folders contain code badly written for reasons:
  tests/fixtures/**
  tests/**/snapshots/**


[darglint]
# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = long


# === Internal tools ===
# You are not interested in anything beyond this line.

[tool:pytest]
# py.test configuration: http://doc.pytest.org/en/latest/customize.html
norecursedirs = tests/fixtures *.egg .eggs dist build docs .tox .git __pycache__

filterwarnings =
  ignore::DeprecationWarning

addopts =
  --strict
  --doctest-modules
  --cov=wemake_python_styleguide
  --cov-branch
  --cov-report=term-missing:skip-covered
  --cov-report=html
  --cov-fail-under=100


[coverage:run]
# Coverage configuration: https://coverage.readthedocs.io/

# We don't need to cover some files. They are fully checked with mypy.
# And don't contain any logic.
omit =
  wemake_python_styleguide/types.py

# Here we specify plugins for coverage to be used:
plugins =
  coverage_conditional_plugin

[coverage:coverage_conditional_plugin]
# Here we specify our pragma rules:
rules =
  "sys_version_info < (3, 8)": py-lt-38
  "sys_version_info >= (3, 8)": py-gte-38


[mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
allow_redefinition = False
check_untyped_defs = True
disallow_untyped_decorators = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True

[mypy-wemake_python_styleguide.logic.safe_eval]
# We allow explicit `Any` only in this file, because that's what it does:
disallow_any_explicit = False


[doc8]
# doc8 configuration: https://pypi.org/project/doc8/
ignore-path = docs/_build
max-line-length = 120
sphinx = True
